tests/snapshots/run_wpt_conformance__coreml_reduceMean_float32_1D_constant_tensor_empty_axes.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
reduce_mean.https.any.js reduceMean float32 1D constant tensor empty axes, coreml
 Failed to dispatch graph: coreml runtime failed: prediction failed: NSGenericException: Failed to add operation to E5 stream. E5RT: Unable to bind buffer to network. (2)

--- built graph ---
webnn_graph "graph" v2 {
  consts {
    operand_0: f32[2] @bytes([162, 176, 191, 194, 162, 176, 191, 66]);
  }

  nodes {
    [reduceMeanOutput] = reduceMean(operand_0, axes=[], keepDimensions=false, label="");
  }

  outputs { reduceMeanOutput; }
}
